feat(Day 1): Part 1 & Part 2

--- a/public/days/1.html
+++ b/public/days/1.html
@@ -13,11 +13,11 @@
   <h2><a href="https://adventofcode.com/2025/day/1">Prompt</a></h2>
 
   <h2>Part 1</h2>
-  <p></p>
+  <p>What's the actual password to open the door?</p>
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>Using password method 0x434C49434B, what is the password to open the door?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
