fix: update questions and prep day 4

--- a/public/days/3.html
+++ b/public/days/3.html
@@ -13,11 +13,11 @@
   <h2><a href="https://adventofcode.com/2025/day/3">Prompt</a></h2>
 
   <h2>Part 1</h2>
-  <p></p>
+  <p>Find the maximum joltage possible from each bank; what is the total output joltage?</p>
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>What is the new total output joltage?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
