feat(Day 4): Part 1

--- a/public/days/4.html
+++ b/public/days/4.html
@@ -13,7 +13,7 @@
   <h2><a href="https://adventofcode.com/2025/day/4">Prompt</a></h2>
 
   <h2>Part 1</h2>
-  <p></p>
+  <p>How many rolls of paper can be accessed by a forklift?</p>
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
