feat(Day 4): Part 2

--- a/public/days/4.html
+++ b/public/days/4.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>How many rolls of paper in total can be removed by the Elves and their forklifts?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
