--- a/public/days/5.html
+++ b/public/days/5.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>How many ingredient IDs are considered to be fresh according to the fresh ingredient ID ranges?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
