feat(Day 6): Part 2

--- a/public/days/6.html
+++ b/public/days/6.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>What is the grand total found by adding together all of the answers to the individual problems?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
