feat(Day 7): Part 2

--- a/public/days/7.html
+++ b/public/days/7.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>In total, how many different timelines would a single tachyon particle end up on?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
