--- a/public/days/8.html
+++ b/public/days/8.html
@@ -13,11 +13,11 @@
   <h2><a href="https://adventofcode.com/2025/day/8">Prompt</a></h2>
 
   <h2>Part 1</h2>
-  <p>What do you get if you multiply together the sizes of the three largest circuits?</p>
+  <p>Connect together the 1000 pairs of junction boxes which are closest together. Afterward, what do you get if you multiply together the sizes of the three largest circuits?</p>
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>What do you get if you multiply together the X coordinates of the last two junction boxes you need to connect?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
