--- a/public/days/9.html
+++ b/public/days/9.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>What is the largest area of any rectangle you can make using only red and green tiles?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
