--- a/public/days/10.html
+++ b/public/days/10.html
@@ -17,7 +17,7 @@
   <p class="answer" id="answer1"></p>
 
   <h2>Part 2</h2>
-  <p></p>
+  <p>What is the fewest button presses required to correctly configure the joltage level counters on all of the machines?</p>
   <p class="answer" id="answer2"></p>
 
   <footer><ul id="nav"></ul></footer>
